samples/_failures_safe/1761186163_8f9094_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b7f242b6.c: In function ‘main’:
./samples/SAFE/__tmp_b7f242b6.c:129:5: error: expected declaration or statement at end of input
  129 |     if (cols1 == rows2) {
      |     ^~
./samples/SAFE/__tmp_b7f242b6.c:129:5: error: expected declaration or statement at end of input
